# algorithm

./: .flake8  Dockerfile  Makefile  README.md  docker-compose.yml
conf/: sources.list
conf/.config/: pypoetry
src/Python/: __init__.py  pyproject.toml
src/Python/algorithm/: leetcode_1137_tribonacci.py  leetcode_167_towsum.py  leetcode_189_rotate.py  leetcode_278_find_first_bad_version.py  leetcode_283_move_zeros.py  leetcode_344_reverseString.py  leetcode_35_insert_position.py  leetcode_509_fibi.py  leetcode_557_reverseWords.py  leetcode_704_bineray_search.py  leetcode_70_climbStairs.py  leetcode_876_middleNode.py  leetcode_977_sortedSquares.py
src/Python/test/: test_all.py
