[tool.poetry]
name = "algorithm"
version = "0.1.0"
description = ""
authors = ["onlyonedaniel <“1324013589@qq.com”>"]

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
default = true

[tool.poetry.dependencies]
python = "^3.8"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.11b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
